fix: media queries spacing

--- a/css/style.css
+++ b/css/style.css
@@ -211,23 +211,19 @@ input {
 }
 
 @media (max-width: 767px) {
-  .gallery {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  .gallery-img {
-    width: 80%;
-  }
-
   .header-title {
     font-size: 2.5rem;
   }
 
   .header-subtitle {
     font-size: 1.5rem;
+  }
+
+  .gallery {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
 
@@ -246,6 +242,11 @@ input {
 
   input {
     width: 210px;
+  }
+
+  .gallery {
+    display: flex;
+    flex-direction: column;
   }
 
   .gallery-img {
